--- a/tolerations.yaml
+++ b/tolerations.yaml
@@ -12,16 +12,13 @@ spec:
           - key: project
             operator: In
             values:
-            - expense
+            - roboshop
   containers:
   - name: with-node-affinity
     image: nginx
   tolerations:
   - key: "project"
     operator: "Equal"
-    value: "expense"
-    effect: "NoSchedule"
-  - key: "project"
-    operator: "Exists"
-    effect: "NoSchedule"
+    value: "roboshop"
+    effect: "NoExecute"
   
